feat: added cmake support
added a first set of cmake enabled libraries and exes. Will need more support and will not change existing behavior

yafra.org C/C++ project

--- a/org.yafra.clibs/libs/psmume/index.html
+++ b/org.yafra.clibs/libs/psmume/index.html
@@ -1,12 +1,12 @@
 <HTML>
 
 <HEAD>
-<TITLE> PISO GUIDE REPOSITORY: AUDIO </TITLE>
+<TITLE> GUIDE REPOSITORY: AUDIO </TITLE>
 </HEAD>
 
 <BODY TEXT="#000000" BGCOLOR="#C0C0FF" LINK="#0000FF" VLINK="#800080" ALINK="#FF0080">
 
-<H2>PISO GUIDE REPOSITORY: MULTIMEDIA</H2>
+<H2>GUIDE REPOSITORY: MULTIMEDIA</H2>
 
 <H4>Kurzbeschreibung</H4>
 Folgende Funktionen sind beinhaltet:
